# OrderFlowGPT-Genesis

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  pyproject.toml
docs/: architecture.md
docs/release-notes/: bundle-11-transcript-alignment.md
release-notes/: 0.1.0.md  0.1.1.md  0.1.10.md  0.1.11.md  0.1.12.md  0.1.13.md  0.1.14.md  0.1.15.md  0.1.16.md  0.1.17.md  0.1.18.md  0.1.19.md  0.1.2.md  0.1.20.md  0.1.21.md  0.1.22.md  0.1.23.md  0.1.24.md  0.1.25.md  0.1.3.md  0.1.4.md  0.1.5.md  0.1.6.md  0.1.7.md  0.1.8.md  0.1.9.md
tests/: test_absorption_detection.py  test_advanced_order_flow_analytics.py  test_analysis.py  test_auction_market_theory_bundle.py  test_cell_classification.py  test_cell_coordinate_system.py  test_chart_detector.py  test_dataset_builder_bundle.py  test_fabio_knowledge_extraction_bundle.py  test_fabio_learning_memory_bundle.py  test_fabio_video_ingestion_bundle.py  test_footprint_cell_detector.py  test_footprint_delta_analysis.py  test_footprint_grid_detector.py  test_footprint_imbalance_detection.py  test_footprint_matrix_builder.py  test_footprint_semantic_interpretation.py  test_genesis_runner_cli_bundle.py  test_market_profile_core.py  test_market_structure_bundle.py  test_multi_timeframe_context_bundle.py  test_object_detection.py  test_ocr_foundation.py  test_ocr_post_processing.py  test_price_axis_detector.py  test_session_intelligence_bundle.py  test_stacked_imbalance_detection.py  test_time_axis_detector.py  test_transcript_alignment_bundle.py  test_trend_engine_bundle.py  test_vision.py  test_volume_cluster_analysis.py
(+14 files in other folders)
